@@ -33,6 +33,9 @@ This file lists the incompatible changes between Version 2.x and older versions
     use reliably together with intnum with boundary conditions)
   - remove useless function intnumstep: instead of intnum(a,b, intnumstep()+m),
     use intnum(a,b,m)
+  - remove partially implemented functions intfouriercos / intfouriersin /
+    intfourierexp: use intnum (possibly intfuncinit). Make sure to indicate
+    oscillating behaviour when function decrease slowly at oo
 
 * Specific to the PARI library:
 ===============================
