@@ -1,19 +1,0 @@
-Function: intfourierexp
-Section: sums
-C-Name: intfourexp0
-Prototype: V=GGGEDGp
-Help: intfourierexp(X=a,b,z,expr,{tab}): numerical integration from a to b
- of exp(-2*I*Pi*z*X)*expr(X) from a to b, where a, b, and tab are as in intnum.
- This is the ordinary Fourier transform if a=-infty and b=+infty. Note the
- minus sign.
-Wrapper: (,,,G)
-Description:
-  (gen,gen,gen,gen,?gen):gen:prec intfourierexp(${4 cookie}, ${4 wrapper}, $1, $2, $3, $5, prec)
-Doc: numerical
- integration of $\var{expr}(X)\exp(-2i\pi zX)$ from $a$ to $b$, in other words
- Fourier transform (from $a$ to $b$) of the function represented by
- \var{expr}. Note the minus sign. Endpoints $a$ and $b$ are coded as in
- \kbd{intnum}, and are not necessarily at infinity but if they are,
- oscillations (i.e. $[\pm\infty,\alpha I]$) are forbidden.
-
- \synt{intfourierexp}{void *E, GEN (*eval)(void*,GEN), GEN a, GEN b, GEN z, GEN tab, long prec}.
