@@ -95,10 +95,6 @@ b = sumalt(n=1,(-1)^n/(n^3+n+1));
 check(a, b)
 
 \p96
-check(intfourierexp(t=[-oo,1],[oo,1], 1/2, exp(-t^2)), sqrt(Pi)*exp(-Pi^2/4))
-check(intfouriercos(t=0,[[1],1], 1/2, exp(-t^2)), sqrt(Pi)/2*exp(-Pi^2/4))
-intfouriersin(t=0,[[1],1], 1/2, exp(-t^2))
-
 check(intnumgauss(x=0,1,sin(x)), 1-cos(1))
 T=intnumgaussinit();
 check(intnumgauss(x=0,1,1/(x+1),T), log(2))
