@@ -360,3 +360,6 @@ Removed
       reliably together with intnum with boundary conditions)
    4- useless function intnumstep: instead of intnum(a,b, intnumstep()+m),
       use intnum(a,b,m).
+   5- partially implemented functions intfouriercos / intfouriersin /
+      intfourierexp: use intnum (possibly intfuncinit). Make sure to indicate
+      oscillating behaviour when function decrease slowly at oo
